# laundry-monitor

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-quality-gates.yaml  release-demo.yaml  release-demo.yml
frontend/: admin_app.py  app.py  config.py
frontend/.streamlit/: config.toml
frontend/pages/: dryers.py  washers.py
frontend/utils/: api_client.py  components.py  helpers.py
src/: get_db.py  main.py
src/models/: __init__.py  machines.py  reports.py
src/routers/: machines.py
src/schemas/: __init__.py  machines.py  report.py  success.py
src/service/: __init__.py  machine.py
src/settings/: __init__.py  db.py  dorm.py  machine.py
tests/: conftest.py  test_api.py  test_dummy.py  test_e2e.py  test_models.py  test_service.py  test_settings.py  test_status_properties.py  test_status_unit.py
