[project]
name = "laundry-monitor"
version = "0.1.0"
description = "A simple web application for managing the washing machines in the univerysity laundry room."
authors = [
    {name = "Gleb Popov",email = "g.popov@innopolis.university"},
    {name = "Aziz Vundirov",email = "a.vundirov@innopolis.university"},
    {name = "Elizaveta Zagurskih",email = "e.zagurskih@innopolis.university"},
    {name = "Aleksey Antipov",email = "a.antipov@innopolis.university"},
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "locust (>=2.43.3,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "xenon (>=0.9.3,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "hypothesis (>=6.151.10,<7.0.0)",
    "ruff>=0.15,<0.16",
]

[tool.ruff]
indent-width = 4
target-version = "py312"
line-length = 89

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",     # Docstrings in public modules
    "D104",     # Docstrings in public package
    "D107",     # Docstrings in __init__
    "D212",     # multi-line-summary-first-line
    "D203",     # blank line required before class docstring
    "D211",     # no-blank-line-before-class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/db.py" = ["T201"]
"test_*.py" = [
    "S101",     # use of assert
    "PLR2004",  # unused function arguments
    "ARG002",   # unused method arguments
    "S105",     # hardcoded password
    "PLR0913",  # too many arguments
    "FBT001",   # boolean positional argument used in function definition
]
